--- a/Dashboard/css/custom.css
+++ b/Dashboard/css/custom.css
@@ -1,3 +1,6 @@
+.btn .btn-default .dropdown-toggle {
+  display:none;
+}
 .nav-sm .container.body .col-md-3.left_col {
   width: 70px;
   padding: 0;
